# puckrat

./: Cargo.toml
.zed/: tasks.json
src/: alpmutil.rs  app.rs  event.rs  logparse.rs  main.rs  message.rs  model.rs
src/view/: main_screen.rs  mod.rs  pkginfo.rs  transactions.rs
