[package]
name = "puckrat"
version = "0.1.0"
edition = "2024"

[dependencies]
alpm = "5.0.2"
env_logger = { version = "0.11.8", features = ["color"] }
log = { version = "0.4.29", features = ["std"] }
memchr = { version = "2.7.6", features = ["logging"] }
ratatui = "0.30.0"
thiserror = "2.0.18"
time = { version = "0.3.46", features = ["parsing", "macros", "formatting"] }
